#323 #230  Critical bug fix. Fix code for automatically calling variants when only alignments provided.  This code needed to be upgraded to match the recent rework to accommodate 1) fewer times showVariants() called 2) y-axis for bam depth based on max depth of all samples.  Also, the code that was setting the site specific gene source wasn't correctly updating the dropdown.  Now, it always shows (no need to click on settings button.)  Call variants will correctly evaluate the isRefSeq flag (now passed into vcf.iobio.annotateRegion) to correctly annotate according to refseq/gencode transcript set.

--- a/assets/css/sass/site.sass
+++ b/assets/css/sass/site.sass
@@ -114,6 +114,11 @@ h5
   border: none !important
   color: $text-color
 
+#gene-source-box
+  .selectize-input
+    padding-top: 8px
+    padding-bottom: 7px
+
 #phenolyzer-search-box
   .selectize-input
     -webkit-box-shadow: none
